--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="container">
    
-     <img class="logo" src="stmik.jpg"/>
+     <img class="logo" src="sabili.png"/>
      
      <h1>Selamat Datang</h1>
      <h2>UAS Bahasa Inggris 1</h2>
